--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/Travel_application
-JWT_SECRET=your_jwt_secret_here
+MONGODB_URI=mongodb+srv://mahaveer:mahaveer$310@cluster0.3fzbv.mongodb.net/
+JWT_SECRET=Travel_application_Secret
 NODE_ENV=development 
