--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGODB_URI=mongodb+srv://mahaveer:mahaveer$310@cluster0.3fzbv.mongodb.net/
+MONGODB_URI=mongodb+srv://mahaveer:mahaveer$310@cluster0.3fzbv.mongodb.net/Traverl_Application
 JWT_SECRET=Travel_application_Secret
 NODE_ENV=development 
